Bug 160020 - Mnemonics underlines not visible anymore in gen VCL plugin
Summary: Mnemonics underlines not visible anymore in gen VCL plugin
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Main-Menu Shortcuts-Accelerators
  Show dependency treegraph
 
Reported: 2024-03-04 08:28 UTC by stragu
Modified: 2024-03-19 12:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Useragent LibreofficeDev (94.06 KB, image/png)
2024-03-05 17:15 UTC, milupo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2024-03-04 08:28:32 UTC
Mnemonics / accelerator underlines are not visible anymore in the top menu bar for the gen VCL plugin, when they used to always be visible.
Context menus are not affected. kf5 plugin not affected.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 709866a3b8e073fab4937dcf91dcd33ff1d2bc13
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Before f2dfb95258215f90562617823b950c3ed151c1bf, they were always visible. Since then, they disappeared and the tilde was visible in the inactive elements.
The tilde issue was solved with 4d39b88283d02eb44fe4cb8f3e4ec153ebf96a13 for bug 159976 but the mnemonics are still not visible.
Comment 1 milupo 2024-03-05 17:15:23 UTC Comment hidden (obsolete)
Comment 2 Mike Kaganski 2024-03-05 17:52:15 UTC Comment hidden (obsolete)
Comment 3 milupo 2024-03-05 18:34:20 UTC Comment hidden (obsolete)
Comment 4 milupo 2024-03-05 18:35:16 UTC Comment hidden (obsolete)
Comment 5 Mike Kaganski 2024-03-05 18:39:24 UTC Comment hidden (obsolete)
Comment 6 raal 2024-03-09 10:17:25 UTC
Confirm with Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 806362b915ee89a4f907905a8ac8c1527ea99223
CPU threads: 4; OS: Linux 6.5; UI render: Skia/Vulkan; VCL: x11
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 7 Commit Notification 2024-03-15 09:24:54 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f097720636fe88c6d36e3a8cac98aa51622dbb6c

tdf#160020: don't hide mnemonics, when auto-accel feature is off

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 stragu 2024-03-19 12:23:25 UTC
Thanks Mike, verified in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 479b5bbe8ca2177ba7574e7aa2308b5d0de1895c
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: x11
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded