tdf#160020: don't hide mnemonics, when auto-accel feature is off

Change-Id: I08ee0ba87c5c54403a329100b69e96aac3aded28
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164857
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>